--- a/MLP_MNIST.ipynb
+++ b/MLP_MNIST.ipynb
@@ -201,8 +201,8 @@
     "cm = confusion_matrix(Y_test, Y_pred) \n",
     "plt.figure(figsize=(9, 9))\n",
     "sns.heatmap(cm, annot=True, cmap='Blues_r', linewidths=.5, square=True)\n",
-    "plt.ylabel('Classe corretta')\n",
-    "plt.xlabel('Classe predetta')\n",
+    "plt.ylabel('Correct class')\n",
+    "plt.xlabel('Predicted class')\n",
     "plt.show()"
    ]
   },
