--- a/MLP_MNIST.ipynb
+++ b/MLP_MNIST.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load libraries",
+    "# Load libraries\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.metrics import accuracy_score, log_loss\n",
