--- a/MLP_MNIST.ipynb
+++ b/MLP_MNIST.ipynb
@@ -282,6 +282,7 @@
     "for i in range(0,len(X_test)):\n",
     "    if(Y_test[i]!=Y_pred[i]):\n",
     "        count+=1\n",
+    "        print(f"The number {Y_test[i]} has been classified as {Y_pred[i]}")\n",
     "        #plt.imshow(X_test[i].reshape([28,28]), cmap=\"gray\")\n",
     "        #plt.show()\n",
     "print(f\"Number of wrong images over the test set: {count}\")\n",
